--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -24,8 +24,7 @@
 
 % math package
 \usepackage{mathtools}
-\usepackage{amsthm}
-\usepackage{environ,cancel,cases}
+\usepackage{amsthm,environ,cancel,cases}
 \usepackage{amsmath, amssymb, dsfont, bm,blkarray}
 % \usepackage[amsthm]{ntheorem}
 \usepackage{thmtools}
@@ -221,5 +220,6 @@
 \input{renewalProc.tex}
 \input{gbn_analysis.tex}
 \input{chapter_SN.tex}
-
+% \appendix
+% \input{formulas.tex}
 \end{document}
