--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -52,7 +52,7 @@ In general,
 \section{Properties}
 
 \begin{itemize}
-	\item Consider the sum of two independent Poisson process with parameters $\lambda_1$ and $\lambda_2$, what is the outgoing process?
+	\item Consider the sum of two independent Poisson processes with parameters $\lambda_1$ and $\lambda_2$, what is the outgoing process?
 		 \begin{figure}[H]
 			\centering
 			\begin{tikzpicture}
@@ -200,7 +200,7 @@ Defining
 \begin{theorem}[5.6, Conditioned Arrivals]
 	(Enunciate given in an intuitive but not so formal way)
 
-	Being $X(t)$ a Poisson Process with $\lambda>0$, $u$ and $t$ two temporal variables such that $0<u<t$, $n$ and $k$ two variables which describes the number of arrivals such that $0\leq k\leq n$ . The probability of the event ``up to instant $u$, $k$ arrivals have been occurred conditioned by the fact that $n$ arrivals occurs up to time $t$'' is described by a binomial distribution with $n$ attempts and $u/t$ success probability.
+	Being $X(t)$ a Poisson Process with $\lambda>0$, $u$ and $t$ two temporal variables such that $0<u<t$, $n$ and $k$ two variables which describe the number of arrivals such that $0\leq k\leq n$ . The probability of the event ``up to instant $u$, $k$ arrivals occurred conditioned by the fact that $n$ arrivals occurs up to time $t$'' is described by a binomial distribution with $n$ attempts and $u/t$ success probability.
 
 	Formally
 	\begin{equation}
@@ -259,7 +259,7 @@ Now we can compute
 		\prob[M(t)=m] &= \sum\limits_{n=0}^{+\infty} \prob[M(t)=m|X(t)=n]\prob[X(t)=n] \\
 		&= \sum\limits_{n=m}^{+\infty} \frac{n!}{m!(n-m)!}p^m(1-p)^{n-m}\frac{e^{-\lambda t} (\lambda t)^n}{n!} \\
 		&= \frac{e^{-\lambda t} (\lambda p t)^m}{m!}\sum\limits_{n=m}^{+\infty} \frac{(1-p)^{n-m}(\lambda t)^{n-m}}{(n-m)!}\\
-		&= \frac{e^{-\lambda t} (\lambda p t)^m}{m!} e^{-\lambda(1-p)t}\\
+		&= \frac{e^{-\lambda t} (\lambda p t)^m}{m!} e^{\lambda(1-p)t}\\
 		&= \frac{e^{-\lambda p t}(\lambda p t)^m}{m!}
 	\end{split}
 \end{equation}
@@ -311,7 +311,7 @@ Now suppose to consider the interval $d\tau$, we have
 If the user transmits only at the end of the (universal) time: Slotted ALOHA.
 With SA the vulnerability interval becomes T=1. $\implies S_{max}=\frac{1}{e} \approx 37\% \quad G_{max} = 1$.
 
-Actually, this analysis can not be completely correct, since we suppose G as fixed in order to find a working point. In a real system, G cannot be fixed. In the follows we propose an approach to take in account this problem.
+Actually, this analysis can not be completely correct, since we suppose G as fixed in order to find a working point. In a real system, G cannot be fixed. In what follows we propose an approach to take in account this problem.
 
 \subsubsection{Correct approach}
 
@@ -320,7 +320,7 @@ Suppose $m$ users.
 Let the state of the system be n, which considers the number of backlogged users.
 The traffic per user is $\frac{\lambda}{m}$ and let the probability that a backlogged user transmits in a slot be $q_r$. Suppose the retransmission probability density function be a geometric, then a non-backlogged user transmits with probability $q_a = 1-e^{-\frac{\lambda}{m}}$.
 
-As the arrival are Poissonian and the retransmission are memoryless, we can study this case with \gls{mc}.
+As the arrivals are Poissonian and the retransmissions are memoryless, we can study this case with \gls{mc}.
 
 \begin{equation}\begin{split}
 	Q_a(i,n) &= \prob[\text{i new arrivals per TX | state n}] = \binom{m-n}{i} q_a^i (1-q_a)^{m-n-i} \\
@@ -415,7 +415,7 @@ Then the \gls{mc} is unstable (i.e. non-positive recurrent)
 \begin{figure}
 	\centering
 	\input{img/KaplansPlot.tex}
-	\caption{In the orange region, the function is unstable, in according to the Kaplan's Lemma.}
+	\caption{In the orange region, the function is unstable, according to the Kaplan's Lemma.}
 	\label{fig:kaplan}
 \end{figure}
 
@@ -453,7 +453,7 @@ State transitions take $\begin{cases}
 	\caption{The new system, in red, perform always better than Aloha, in blue}
 	\label{}
 \end{figure}
-If two transmissions occours at the same tume, but the nodes transmitting are far enough, they won't hear each other and packets will collide.
+If two transmissions occour at the same time, but the nodes transmitting are far enough, they won't hear each other and packets will collide.
 
 \begin{table}[h!]
 	\centering
@@ -469,7 +469,7 @@ If two transmissions occours at the same tume, but the nodes transmitting are fa
 $D_n \lessgtr 0 $ if $\lambda \lessgtr \frac{g(n) e^{-g(n)}}{\beta + 1 - e^{-g(n)}}$\\
 We know that instability will occour eventually, but the time for it to happen is really long.
 
-\subsection{Recurrent \gls{mc} behaviour}
+\subsection{Recurrent \gls{mc} behavior}
 Suppose a recurrent \gls{mc} like the one in figure \ref{fig:recurrMC}, we can study a system which has a transient state and two states, 0 and 1,
 that may be recurrent.
 \begin{figure}[h!]\centering
@@ -496,7 +496,7 @@ that may be recurrent.
 	\end{pmatrix}\\
 \end{split}\end{equation}
 
-We than have that
+We then have that
 
 \begin{equation}\begin{split}
 	P^2&=\begin{pmatrix}
